View Issue Details

IDProjectCategoryView StatusLast Update
0032479Open CASCADEOCCT:Application Frameworkpublic2021-07-17 10:05
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.6.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032479: Application Framework - unnecessary API break within TDocStd_Application::Open()
DescriptionTDocStd_Application::Open() definition has been changed to introduce new theFilter parameter:
  PCDM_ReaderStatus Open (Standard_IStream& theIStream,
      Handle(TDocStd_Document)& theDoc,
      const Handle(PCDM_ReaderFilter)& theFilter = Handle(PCDM_ReaderFilter)(),
      const Message_ProgressRange& theRange = Message_ProgressRange());


This API break doesn't look justified as most users will not use theFilter argument anyway.
It could be simply resolved by defining an additional method with fewer number of parameters or by moving theFilter to the end of argument list.
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0031918 closedbugmaster Application Framework - New binary format for fast reading part of OCAF document 

Activities

git

2021-07-14 11:31

administrator   ~0102517

Branch CR32479 has been created by kgv.

SHA-1: dc84ac8e7feebce27df93ee14acf719bdbbb13e7


Detailed log of new commits:

Author: kgv
Date: Wed Jul 14 11:31:16 2021 +0300

    0032479: Application Framework - unnecessary API break within TDocStd_Application::Open()
    
    Added aliases to Open() without theFilter argument for compatibility with old API.

kgv

2021-07-14 12:29

developer   ~0102519

Patch is ready for review
- OCCT: branch CR32479.

http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32479-master-KGV/view/ALL/

mpv

2021-07-14 13:39

developer   ~0102520

Reviewed
OCCT: branch CR32479

bugmaster

2021-07-17 09:46

administrator   ~0102598

Combination -
OCCT branch : IR-2021-07-16
master SHA - acab849d30f2acb733586120dcd2b43f2ae59769
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-07-16 SHA - 0b2936175e8e41158165aa983c4bd52035d88570
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17229.290000000303 / 17544.51000000034 [-1.80%]
Products
Total CPU difference: 11476.020000000117 / 11490.74000000011 [-0.13%]
Windows-64-VC14:
OCCT
Total CPU difference: 19019.8125 / 19318.21875 [-1.54%]
Products
Total CPU difference: 12732.515625 / 12831.40625 [-0.77%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-07-17 10:05

administrator   ~0102608

Branch CR32479 has been deleted by mnt.

SHA-1: dc84ac8e7feebce27df93ee14acf719bdbbb13e7

Related Changesets

occt: master acab849d

2021-07-14 08:31:16

kgv


Committer: bugmaster Details Diff
0032479: Application Framework - unnecessary API break within TDocStd_Application::Open()

Added aliases to Open() without theFilter argument for compatibility with old API.
Affected Issues
0032479
mod - src/TDocStd/TDocStd_Application.hxx Diff File

Issue History

Date Modified Username Field Change
2021-07-14 11:21 kgv New Issue
2021-07-14 11:21 kgv Assigned To => mpv
2021-07-14 11:21 kgv Relationship added child of 0031918
2021-07-14 11:21 kgv Description Updated
2021-07-14 11:31 git Note Added: 0102517
2021-07-14 12:29 kgv Note Added: 0102519
2021-07-14 12:29 kgv Status new => resolved
2021-07-14 13:39 mpv Note Added: 0102520
2021-07-14 13:39 mpv Assigned To mpv => bugmaster
2021-07-14 13:39 mpv Status resolved => reviewed
2021-07-17 09:46 bugmaster Note Added: 0102598
2021-07-17 09:46 bugmaster Status reviewed => tested
2021-07-17 09:49 bugmaster Test case number => Not required
2021-07-17 09:58 bugmaster Changeset attached => occt master acab849d
2021-07-17 09:58 bugmaster Status tested => verified
2021-07-17 09:58 bugmaster Resolution open => fixed
2021-07-17 10:05 git Note Added: 0102608