0032479: Application Framework - unnecessary API break within TDocStd_Application::Open()

Added aliases to Open() without theFilter argument for compatibility with old API.